objects/Shadow_Case__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Shadow_Cases_Account_Custom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Diagnostic_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agent Diagnostic Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetId</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Shadow_Cases_Asset_Custom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auth_Id__c</fullName>
        <label>Auth Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <description>Customer&apos;s browser used when navigating the TurboTax Support site</description>
        <inlineHelpText>Customer&apos;s browser used when navigating the TurboTax Support site</inlineHelpText>
        <label>Browser</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>FireFox</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer 6</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer 7</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer 8</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer 9</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessHoursId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusinessHoursId</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Shadow_Cases_BusinessHours_Custom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseCreatedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseCreatedById</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shadow_Cases_CreatedBy_Custom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseCreatedDate__c</fullName>
        <label>CaseCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseIdExternalId__c</fullName>
        <externalId>true</externalId>
        <label>CaseIdExternalId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CaseLastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseLastModifiedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shadow_Cases_Modifiedby_Custom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseLastModifiedDate__c</fullName>
        <label>CaseLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Channel__c</fullName>
        <description>Channel is how the customer request was handled.</description>
        <inlineHelpText>Channel is how the customer request was handled.</inlineHelpText>
        <label>Case Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                    <default>true</default>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Phone - Call Back</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Create_Day__c</fullName>
        <formula>CASE( 

MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 

0, &quot;Sunday&quot;, 

1, &quot;Monday&quot;, 

2, &quot;Tuesday&quot;, 

3, &quot;Wednesday&quot;, 

4, &quot;Thursday&quot;, 

5, &quot;Friday&quot;, 

6, &quot;Saturday&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Create Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>Visual indicator of a case being closed.</description>
        <formula>IMAGE(CASE(Status__c,

&quot;Closed&quot;,&quot;https://intuit--c.na14.content.force.com/servlet/servlet.FileDownload?file=015E0000001Ah0k&quot;,

&quot;Escalated&quot;, &quot;https://intuit--c.na14.content.force.com/servlet/servlet.FileDownload?file=015d0000000f5fZ&quot;, 

&quot;On Hold&quot;, &quot;https://intuit--c.na14.content.force.com/servlet/servlet.FileDownload?file=015d0000000f5ed&quot;, 

&quot;New&quot;, &quot;https://intuit--c.na14.content.force.com/servlet/servlet.FileDownload?file=015d0000000f5fU&quot;, 

&quot;Open&quot;,  &quot;https://intuit--c.na14.content.force.com/servlet/servlet.FileDownload?file=015E0000001Ah0j&quot;,

&quot;/s.gif&quot;), &quot;status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_is_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is checked when a Social Media case is assigned to a user.</description>
        <label>Case is Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CAN-Accuracy &amp; Maximum Refund Guarantee</fullName>
                </value>
                <value>
                    <fullName>CAN-Assessment Review and Explanation</fullName>
                </value>
                <value>
                    <fullName>CAN-Business Question</fullName>
                </value>
                <value>
                    <fullName>CAN-Capital Cost Allowance (CCA)</fullName>
                </value>
                <value>
                    <fullName>CAN-Customer Service</fullName>
                </value>
                <value>
                    <fullName>CAN-Deductions &amp; Credits</fullName>
                </value>
                <value>
                    <fullName>CAN-Donations</fullName>
                </value>
                <value>
                    <fullName>CAN-Filing Status</fullName>
                </value>
                <value>
                    <fullName>CAN-Income</fullName>
                </value>
                <value>
                    <fullName>CAN-Investment Income &amp; Credits</fullName>
                </value>
                <value>
                    <fullName>CAN-Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>CAN-Personal Information</fullName>
                </value>
                <value>
                    <fullName>CAN-Product Question</fullName>
                </value>
                <value>
                    <fullName>CAN-Provincial Tax Questions (except QC)</fullName>
                </value>
                <value>
                    <fullName>CAN-QC Tax Questions</fullName>
                </value>
                <value>
                    <fullName>CAN-Review &amp; NETFILE Error Messages</fullName>
                </value>
                <value>
                    <fullName>CAN-RRSP/Pension</fullName>
                </value>
                <value>
                    <fullName>CAN-Working on My Return</fullName>
                </value>
                <value>
                    <fullName>Dropped Contact - Escalate to leadership</fullName>
                </value>
                <value>
                    <fullName>HMS - Reached but opted out</fullName>
                </value>
                <value>
                    <fullName>HMS - Unable to reach</fullName>
                </value>
                <value>
                    <fullName>Other Intuit Software</fullName>
                </value>
                <value>
                    <fullName>ProSeries/Lacerte</fullName>
                </value>
                <value>
                    <fullName>Test Contact</fullName>
                </value>
                <value>
                    <fullName>TurboTax (wrong country)</fullName>
                </value>
                <value>
                    <fullName>US-ACA</fullName>
                </value>
                <value>
                    <fullName>US-Audit Support Center</fullName>
                </value>
                <value>
                    <fullName>US-Audit Support Guarantee</fullName>
                </value>
                <value>
                    <fullName>US-Business Questions</fullName>
                </value>
                <value>
                    <fullName>US-Credits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>ClosedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed_in_last_24_hours__c</fullName>
        <description>Formula field to determine if a case has been closed in the last 24 hours. Used for determining if we need to send a survey email</description>
        <formula>IF( NOW() -ClosedDate__c &lt;1,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed in last 24 hours?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Shadow_Cases_Contact_Custom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Driver__c</fullName>
        <description>That was this case primarily about?</description>
        <inlineHelpText>DI: Download &amp; Install
DROP: Dropped Call
GS: Getting Started
PF: Print &amp; File
PRIV: Privacy
SB: Shop/Buy
TA: Tax Advice
WOMR: Working On My Return</inlineHelpText>
        <label>Contact Driver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DI</fullName>
                </value>
                <value>
                    <fullName>DROP</fullName>
                </value>
                <value>
                    <fullName>GS</fullName>
                </value>
                <value>
                    <fullName>PF</fullName>
                </value>
                <value>
                    <fullName>PRIV</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>TA</fullName>
                </value>
                <value>
                    <fullName>WOMR</fullName>
                </value>
                <value>
                    <fullName>SELECT</fullName>
                    <color>#FF0000</color>
                    <default>true</default>
                    <label>SELECT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_Since_Opened__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Encoded_Contact_First_Name__c</fullName>
        <label>Encoded Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAQsViewed__c</fullName>
        <description>FAQs customer view on TTS</description>
        <inlineHelpText>FAQs customer view on TTS</inlineHelpText>
        <label>FAQs Viewed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederationIdentifier__c</fullName>
        <description>The SAML Federation Identifier from the Case Owner.</description>
        <label>FederationIdentifier</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ININQueueName__c</fullName>
        <description>ININ telephony workgroup queue name</description>
        <inlineHelpText>ININ telephony workgroup queue name</inlineHelpText>
        <label>Workgroup Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEscalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEscalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelfServiceClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSelfServiceClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInSelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsVisibleInSelfService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveLookId__c</fullName>
        <description>id used for screen share - how will we record this?</description>
        <inlineHelpText>id used for screen share - how will we record this?</inlineHelpText>
        <label>Live Look Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_for_Agent__c</fullName>
        <description>Internal notes for agents to enter regarding a case</description>
        <label>Notes for Agent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OperatingSystem__c</fullName>
        <description>Customer&apos;s Operating System used when navigating the TurboTax Support site</description>
        <inlineHelpText>Customer&apos;s Operating System used when navigating the TurboTax Support site</inlineHelpText>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Mac</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Unix</fullName>
                </value>
                <value>
                    <fullName>Google Chrome</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherSystemInfo__c</fullName>
        <description>Customers system info used to navigation TTS</description>
        <inlineHelpText>Customers system info used to navigation TTS</inlineHelpText>
        <label>Other System Info</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnerValue__c</fullName>
        <label>OwnerValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCaseId__c</fullName>
        <label>ParentCaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorityCode__c</fullName>
        <description>Estore priority code segmentation</description>
        <inlineHelpText>Estore priority code segmentation</inlineHelpText>
        <label>Priority Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductId</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Shadow_Cases_Product_Custom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductLocation__c</fullName>
        <description>Product tab and subtab when customer indicated need for help</description>
        <inlineHelpText>Product tab and subtab when customer indicated need for help</inlineHelpText>
        <label>Product Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductTags__c</fullName>
        <description>Product tags when customer indicated need for help</description>
        <inlineHelpText>Product tags when customer indicated need for help</inlineHelpText>
        <label>Product Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Pick__c</fullName>
        <description>Product related to this case</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Device:iPad Deluxe</fullName>
                </value>
                <value>
                    <fullName>Mobile Device:iPad Home &amp; Business</fullName>
                </value>
                <value>
                    <fullName>Mobile Device:iPad Premier</fullName>
                </value>
                <value>
                    <fullName>Mobile Device:SnapTax</fullName>
                </value>
                <value>
                    <fullName>Mobile Device:Unknown</fullName>
                </value>
                <value>
                    <fullName>Platform Unknown:Basic</fullName>
                </value>
                <value>
                    <fullName>Platform Unknown:Deluxe</fullName>
                </value>
                <value>
                    <fullName>Platform Unknown:Home and Business</fullName>
                </value>
                <value>
                    <fullName>Platform Unknown:Premier</fullName>
                </value>
                <value>
                    <fullName>Platform Unknown:Unknown</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Mac Desktop:Basic</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Mac Desktop:Deluxe</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Mac Desktop:Home and Business</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Mac Desktop:Premier</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Mac Desktop:Unknown</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Basic</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Deluxe</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Easy Extension</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Estimated Taxes</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Free</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Free: NUE</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Freedom</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Home and Business</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Its Deductible</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Military</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Premier</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:TTOB</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Online:Unknown</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Windows Desktop:Basic</fullName>
                </value>
                <value>
                    <fullName>TurboTax for Windows Desktop:Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Platform__c</fullName>
        <formula>TEXT(ProductId__r.Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing problem</fullName>
                </value>
                <value>
                    <fullName>User didn&apos;t attend training</fullName>
                </value>
                <value>
                    <fullName>Complex functionality</fullName>
                </value>
                <value>
                    <fullName>Instructions not clear</fullName>
                </value>
                <value>
                    <fullName>New problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestOrigin__c</fullName>
        <description>From what property did this originate: TTO, TTD, SF</description>
        <inlineHelpText>From what property did this originate: TTO, TTD, SF</inlineHelpText>
        <label>RequestOrigin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TTO</fullName>
                </value>
                <value>
                    <fullName>TTD</fullName>
                </value>
                <value>
                    <fullName>SF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Notes for Your Customer</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RoutingSystem__c</fullName>
        <description>system for identifying customer issue category: SRS/Legacy</description>
        <inlineHelpText>system for identifying customer issue category: SRS/Legacy</inlineHelpText>
        <label>Routing System</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>That was this case primarily about?</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dropped/Misdirected</fullName>
                </value>
                <value>
                    <fullName>CAN-Product Support</fullName>
                </value>
                <value>
                    <fullName>CAN-Tax Support</fullName>
                </value>
                <value>
                    <fullName>CAN-Tax Advice</fullName>
                </value>
                <value>
                    <fullName>US-Product Support</fullName>
                </value>
                <value>
                    <fullName>US-Tax Advice</fullName>
                </value>
                <value>
                    <fullName>US-Tax Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Survey_DateTime__c</fullName>
        <description>Ensure ONLY one survey is sent per case. If case is re-opened and closed; the system will not trigger survey email</description>
        <inlineHelpText>Ensure ONLY one survey is sent per case. If case is re-opened and closed; the system will not trigger survey email</inlineHelpText>
        <label>Send Survey DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <formula>LastModifiedBy.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceForm__c</fullName>
        <description>TT Support site form this record was created in</description>
        <inlineHelpText>TT Support site form this record was created in</inlineHelpText>
        <label>Source Form</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Customer Response</fullName>
                </value>
                <value>
                    <fullName>Waiting Customer Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TestRecipe__c</fullName>
        <description>a/b test recipe on TTS</description>
        <inlineHelpText>a/b test recipe on TTS</inlineHelpText>
        <label>Test Recipe</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Feature Request</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visitor_Id__c</fullName>
        <label>Visitor Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Case_Number__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CaseCreatedDate__c</columns>
        <columns>CaseLastModifiedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>